--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ coverage==3.7.1
 dj-database-url==0.3.0
 factory_boy==2.4.1
 flake8==2.4.0
+flake8-docstrings==0.2.1.post1
 flake8-import-order==0.5.3
 incuna-test-utils==6.1.0
 psycopg2==2.6.0
