--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,11 @@
 [bdist_wheel]
 universal = 1
+
 [flake8]
 max-line-length = 90
 max-complexity = 10
-exclude = *migrations*
+exclude = *migrations*,build*
 statistics = true
 application-import-names = groups
 import-order-style = google
+ignore = D100,D101,D102,D203,D204
