Ignore flake8 docstring warning D104

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,4 +8,4 @@ exclude = *migrations*,build*
 statistics = true
 application-import-names = groups
 import-order-style = google
-ignore = D100,D101,D102,D203,D204
+ignore = D100,D101,D102,D104,D203,D204
