--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ colour-runner==0.0.4
 coverage==3.7.1
 dj-database-url==0.3.0
 dj-inmemorystorage==1.3.0
+django-webtest==1.7.8
 factory_boy==2.4.1
 flake8==2.4.0
 flake8-docstrings==0.2.1.post1
