Move fail-under=100 into setup.cfg.

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,3 +9,6 @@ statistics = true
 application-import-names = groups
 import-order-style = google
 ignore = D100,D101,D102,D104,D203,D204
+
+[coverage:report]
+fail-under=100
