--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ env:
     - DATABASE_URL='postgres://postgres@localhost/groups'
   matrix:
     - DJANGO='django~=1.8.0'
+    - DJANGO='django~=1.9.0'
+    - DJANGO='django~=1.10.0'
 install:
   - psql -c 'CREATE DATABASE groups' -U postgres;
   - pip install -r requirements.txt --use-wheel
