--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ colour-runner==0.0.4
 coverage==3.7.1
 dj-database-url==0.3.0
 dj-inmemorystorage==1.3.0
-django-webtest==1.7.8
+django-webtest==1.9.2
 factory_boy==2.4.1
 flake8==2.4.0
 flake8-import-order==0.5.3
@@ -13,3 +13,4 @@ incuna-test-utils==6.2.7
 Pillow==2.7.0
 psycopg2==2.6.0
 pytz==2015.2
+WebTest==2.0.27
